fix: 修复Suno 授权更新
